<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"

>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_sky">


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/front_image"
                android:alpha=".5" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                fancy:cardCornerRadius="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                fancy:cardBackgroundColor="#a099f584"
                android:paddingTop="40dp"
                android:layout_marginTop="-50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    android:textSize="25dp"
                    android:fontFamily="cursive"
                    android:textColor="#585555"
                    android:gravity="center"
                    android:layout_marginTop="10dp"

                    />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="Email"
                    android:textColorHint="#585555"
                    android:inputType="textEmailAddress"
                    android:maxWidth="250dp"
                    android:textColor="@color/Red" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/prompt_password"
                    android:textColorHint="#585555"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Red" />


            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/login_form"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawablePadding="0dp"
            android:minWidth="100dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/btn_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:drawablePadding="0dp"
            android:minWidth="150dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/action_register"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/banquetHallRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_sky"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="Click to Register as Banquet Hall" />

            <Button
                android:id="@+id/caterRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blue_sky"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="Click to Register as Caterer" />

            <Button
                android:id="@+id/ngoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blue_sky"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="Click to Register as MusicSystem Org." />

        </LinearLayout>



    </RelativeLayout>
</ScrollView>



