<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_sky">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/register_user_image"
            android:layout_marginTop="0dp"
            android:scaleType="centerCrop"
            android:alpha=".5"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:alpha="0.5"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="org.xyz.cardview.RegisterActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="20sp"
                android:textColor="#585555"
                android:layout_marginTop="140dp"
                android:layout_marginBottom="10dp"
                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="290dp"
                fancy:cardCornerRadius="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                fancy:cardBackgroundColor="#a099f584"
                android:elevation="50dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textSize="25dp"
                    android:fontFamily="cursive"
                    android:textColor="#585555"
                    android:gravity="center"
                    android:layout_marginTop="10dp"


                    />


                <EditText
                    android:id="@+id/register_fName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:textColorHint="#585555"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/fbutton_color_alizarin"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="50dp"
                    android:capitalize="words" />

                <EditText
                    android:id="@+id/register_lName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="Restaurant Name(optional)"
                    android:textColor="@color/fbutton_color_alizarin"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:layout_marginTop="50dp"
                    android:capitalize="words" />
                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email"
                    android:textColorHint="#585555"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/fbutton_color_alizarin"
                    android:layout_marginTop="100dp"
                    android:capitalize="none" />


                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="#585555"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/fbutton_color_alizarin"
                    android:singleLine="true"
                    android:layout_marginTop="150dp"
                    android:capitalize="none" />

                <EditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="#585555"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/fbutton_color_alizarin"
                    android:singleLine="true"
                    android:layout_marginTop="200dp"
                    android:capitalize="none" />
            </android.support.v7.widget.CardView>
            <!--<com.rey.material.widget.Spinner-->
            <!--style="@style/Material.Widget.Spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:dropDownWidth="wrap_content"-->
            <!--android:id="@+id/region_head_spinner"-->
            <!--android:padding="8dp"-->
            <!--android:layout_height="60dp"-->
            <!--app:spn_labelEnable="true"-->
            <!--app:spn_labelTextSize="12sp"-->
            <!--app:spn_label="Zone head"-->
            <!--app:spn_labelTextColor="#ff0000"-->
            <!--app:rd_style="@style/Material.Drawable.Ripple.Wave"/>-->
            <Button
                android:id="@+id/register_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_account_white_18dp"
                android:drawablePadding="0dp"
                android:minWidth="150dp"
                android:paddingLeft="30dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="REGISTER"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
